<resources>
    <string name="app_name">Advance Mobile IV</string>
    <string name="Register">Login</string>
    <string name="Signup">Register</string>
    <string name="Email">Email</string>
    <string name="username">UserName</string>
    <string name="Pass">Password</string>
    <string name="Contine">Continue</string>
    <string name="Name">Full Name</string>
    <string name="Birthday">Birthday</string>
    <string name="ivtypes">IV Packages</string>
    <string name="ScheduleBTN">Schedule IV</string>
    <string name="contact">Contact</string>
    <string name="facebookbtn">Facebook</string>
    <string name="website">Website</string>
    <string name="CallBTN">Call (602) 318-0426</string>
    <string name="textBTN">Text (602) 318-0426</string>
    <string name="emailbtn">Email Advanced IV</string>
    <string name="ScheduleTV">Schedule</string>
    <string name="advanceTV">Advance Mobile IV Therapy</string>
    <string name="forgot">Reset Password</string>
    <string name="logoutBTN">Logout</string>
    <string name="appointment">Appointment</string>
    <string name="title_activity_contact">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="patient">Name:</string>
    <string name="add">Add-Ins:</string>
    <string name="select">Select IV:</string>
    <string name="addy">Address:</string>
    <string name="stay">Stay Logged In</string>
    <string name="services">IV Services</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>