<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:text="@string/patient"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/schedule1" />

            <TextView
                android:id="@+id/fullname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/tvname" />

            <TextView
                android:id="@+id/tvaddy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="116dp"
                android:text="@string/addy"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.132"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/schedule1" />

            <EditText
                android:id="@+id/addy1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/spinner"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/fullname" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="Magnesium $25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/checkBox11"
                app:layout_constraintTop_toBottomOf="@+id/checkBox11" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="Vitamin D3 $25"
                app:layout_constraintStart_toStartOf="@+id/checkBox13"
                app:layout_constraintTop_toBottomOf="@+id/checkBox13" />

            <TextView
                android:id="@+id/addins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <TextView
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/ScheduleTV"
                android:textColor="@color/black"
                android:textSize="42sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/schedule1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment"
                android:textColor="@color/black"
                android:textSize="42sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/schedule" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="Glutathione $25"
                app:layout_constraintStart_toStartOf="@+id/checkBox9"
                app:layout_constraintTop_toBottomOf="@+id/checkBox9" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Zinc $25"
                android:buttonTint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/checkBox7"
                app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="Anti-histamine $25"
                app:layout_constraintStart_toStartOf="@+id/checkBox10"
                app:layout_constraintTop_toBottomOf="@+id/checkBox10" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Pepcid $25"
                android:buttonTint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/checkBox12"
                app:layout_constraintTop_toBottomOf="@+id/checkBox12" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="B12/Lipotropic combo $25"
                app:layout_constraintStart_toStartOf="@+id/checkBox14"
                app:layout_constraintTop_toBottomOf="@+id/checkBox14" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zofran $25"
                android:buttonTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.557"
                app:layout_constraintStart_toEndOf="@+id/checkBox4"
                app:layout_constraintTop_toTopOf="@+id/checkBox4" />

            <TextView
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/select"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/schedule1" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="Toradol $25"
                app:layout_constraintStart_toStartOf="@+id/checkBox3"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_drop_down"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.423"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="Vitamin C $25"
                app:layout_constraintStart_toStartOf="@+id/addins"
                app:layout_constraintTop_toBottomOf="@+id/addins" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Vitamin B12 $25"
                android:buttonTint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/checkBox4"
                app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="Taurine $25"
                app:layout_constraintStart_toStartOf="@+id/checkBox8"
                app:layout_constraintTop_toBottomOf="@+id/checkBox8" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Date:"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/datePicker"
                app:layout_constraintTop_toBottomOf="@+id/checkBox15" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="B Complex $25"
                app:layout_constraintStart_toStartOf="@+id/checkBox6"
                app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/black"
                android:text="Selenium $25"
                app:layout_constraintStart_toStartOf="@+id/checkBox5"
                app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

            <Button
                android:id="@+id/datePicker"
                style="?android:spinnerStyle"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="JAN 01 2022"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.199"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date"
                />

            <Button
                android:id="@+id/schedulebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScheduleTV"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/datePicker"
                tools:ignore="UsingOnClickInXml" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>